# precompiles-rust-c-api

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  precompiles  precompiles.c
examples/: .gitignore  blake2f.c  ecrecover.c  ripemd160.c  sha256.c
src/: blake2f_impl.rs  ecdsarecover_impl.rs  lib.rs
