[package]
name = "precompiles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ripemd = { version = "0.1", default-features = false }
sha2 = { version = "0.10.5", default-features = false }
sha3 = { version = "0.10.4", default-features = false }
k256 = { version = "0.11", default-features = false, features = ["ecdsa", "keccak256"] }
secp256k1 = { version = "0.24.0", default-features = false, features = ["alloc", "recovery"] }